<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="sling.com.freecast.MainActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="5">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:weightSum="2"
            android:padding="5dp">
            <RelativeLayout
                android:id="@+id/videoContainer"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/videoView_background"
                android:keepScreenOn="true">
            </RelativeLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:padding="5dp">
                <EditText
                    android:id="@+id/finderid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/finderid"/>
                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"/>
                <EditText
                    android:id="@+id/receiverid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/receiverid"/>
                <EditText
                    android:id="@+id/channelnumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/channelnumber"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">
                    <Button
                        android:id="@+id/startsession"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/startsession"
                        android:layout_weight="1"/>
                    <Button
                        android:id="@+id/stopsession"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/stopsession"
                        android:layout_weight="1"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">
                    <Button
                        android:id="@+id/startvideo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/startvideo"
                        android:layout_weight="1"/>
                    <Button
                        android:id="@+id/stopvideo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/stopvideo"
                        android:layout_weight="1"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="3">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/request_result_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/request_result"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/request_result"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/session_status_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/session_status"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/session_status"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/video_status_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/video_status"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/video_status"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
